# fcm-client

./: .gitignore  LICENSE  Makefile  README.md  fcm-client.cabal  stack.yaml
cli/: CliArgs.hs  Main.hs
src/: FCMClient.hs
src/FCMClient/: Types.hs
src/FCMClient/JSON/: Types.hs
test/: Spec.hs
