name:                fcm-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/andreyk0/fcm-client#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2016 Andrey Kartashov
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:     src

  exposed-modules:    FCMClient
                    , FCMClient.JSON.Types
                    , FCMClient.Types

  build-depends:      base >= 4.9 && < 5.0
                    , aeson
                    , aeson-casing
                    , bytestring
                    , containers
                    , http-client
                    , http-conduit
                    , http-types
                    , lens
                    , scientific
                    , text
                    , time

  default-language:   Haskell2010

  ghc-options:        -Wall -fwarn-tabs



executable            fcm-client

  hs-source-dirs:     cli

  main-is:            Main.hs

  other-modules:      CliArgs

  default-language:   Haskell2010

  build-depends:      base >= 4.9 && < 5.0
                    , aeson
                    , async
                    , bytestring
                    , conduit
                    , conduit-extra
                    , fcm-client
                    , http-client
                    , http-types
                    , lens
                    , resourcet
                    , retry
                    , optparse-applicative
                    , stm-conduit
                    , text
                    , utf8-string

  ghc-options:        -Wall -fwarn-tabs -threaded -O2



test-suite test
  type:               exitcode-stdio-1.0

  hs-source-dirs:     test

  main-is:            Spec.hs

  build-depends:      base >= 4.9 && < 5.0
                    , aeson
                    , containers
                    , fcm-client
                    , HUnit
                    , lens
                    , QuickCheck
                    , test-framework
                    , test-framework-hunit
                    , test-framework-quickcheck2
                    , text

  default-language:   Haskell2010

  ghc-options:        -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-missing-signatures



source-repository head
  type:     git
  location: https://github.com/andreyk0/fcm-client
